# alfred-datecalc

./: .gitignore  README.md  ast.py  ast_test.py  calculator.py  format.py  parser.py  parser_test.py  pyproject.toml  test.py  unit.py  unit_test.py
alfred_date_calc/: format.py  parser.py  unit.py
tests/: ast_test.py  parser_test.py  test_alfred_date_calc.py  unit_test.py
